@@ -1,5 +1,10 @@
 2008-02-19  J. Tang  <jtang@tresys.com>
 
+	* Added QPOL_POLICY_OPTION_MATCH_SYSTEM as a policy load option to
+	qpol_policy_open_from_file().  The tools seinfo, sesearch, and
+	sechecker will now use this flag when loading the system's default
+	policy.
+
 	* Modified libqpol to understand version 22 policy.  Added
 	QPOL_CAP_POLCAPS to qpol_capability enum.
 
